@@ -33,6 +33,7 @@ File "%static_deps%/bin/libboost_filesystem-mt.dll"
 File "%static_deps%/bin/libboost_system-mt.dll"
 File "%static_deps%/bin/libboost_thread_win32-mt.dll"
 File "%static_deps%/bin/libboost_date_time-mt.dll"
+File "%static_deps%/bin/libboost_locale-mt.dll"
 File "%static_deps%/bin/libeay32.dll"
 File "%static_deps%/bin/libgcc_s_sjlj-1.dll"
 File "%static_deps%/bin/libgio-2.0-0.dll"
@@ -40,7 +41,7 @@ File "%static_deps%/bin/libglib-2.0-0.dll"
 File "%static_deps%/bin/libgobject-2.0-0.dll"
 File "%static_deps%/bin/libiconv-2.dll"
 File "%static_deps%/bin/libjpeg-8.dll"
-File "%static_deps%/bin/libMagick++-6.Q16-2.dll"
+File "%static_deps%/bin/libMagick++-6.Q16-3.dll"
 File "%static_deps%/bin/libMagickCore-6.Q16-1.dll"
 File "%static_deps%/bin/libMagickWand-6.Q16-1.dll"
 File "%static_deps%/bin/libpng15-15.dll"
