@@ -41,7 +41,6 @@
 using std::vector;
 using std::ifstream;
 using std::string;
-using std::ofstream;
 using std::list;
 using std::max;
 using std::exception;
@@ -182,6 +181,7 @@ Config::read ()
 void
 Config::read_old_metadata ()
 {
+	/* XXX: this won't work with non-Latin filenames */
 	ifstream f (file(true).string().c_str ());
 	string line;
 
