@@ -70,6 +70,9 @@ cpu_info ()
 	string info;
 	
 #ifdef DCPOMATIC_LINUX
+	/* This use of ifstream is ok; the filename can never
+	   be non-Latin
+	*/
 	ifstream f ("/proc/cpuinfo");
 	while (f.good ()) {
 		string l;
@@ -268,4 +271,20 @@ openssl_path ()
 	return "openssl";
 #endif
 
+}
+
+/* Apparently there is no way to create an ofstream using a UTF-8
+   filename under Windows.  We are hence reduced to using fopen
+   with this wrapper.
+*/
+FILE *
+fopen_boost (boost::filesystem::path p, string t)
+{
+#ifdef DCPOMATIC_WINDOWS
+        wstring w (t.begin(), t.end());
+	/* c_str() here should give a UTF-16 string */
+        return _wfopen (p.c_str(), w.c_str ());
+#else
+        return fopen (p.c_str(), t.c_str ());
+#endif
 }
