@@ -26,6 +26,7 @@
 #include "i18n.h"
 
 using std::cout;
+using std::string;
 using boost::shared_ptr;
 
 StillImageExaminer::StillImageExaminer (shared_ptr<const Film> f, shared_ptr<const StillImageContent> c)
@@ -33,7 +34,7 @@ StillImageExaminer::StillImageExaminer (shared_ptr<const Film> f, shared_ptr<con
 	, _film (f)
 {
 	using namespace MagickCore;
-	Magick::Image* image = new Magick::Image (_still_image_content->path().string());
+	Magick::Image* image = new Magick::Image (_still_image_content->path().string ());
 	_video_size = libdcp::Size (image->columns(), image->rows());
 	delete image;
 }
