@@ -62,7 +62,6 @@ using std::map;
 using std::make_pair;
 using std::list;
 using std::exception;
-using std::ofstream;
 using boost::shared_ptr;
 using boost::dynamic_pointer_cast;
 
@@ -247,6 +246,22 @@ public:
 		: wxFrame (NULL, -1, title)
 		, _servers_list_dialog (0)
 	{
+#ifdef DCPOMATIC_WINDOWS_CONSOLE		
+                AllocConsole();
+		
+		HANDLE handle_out = GetStdHandle(STD_OUTPUT_HANDLE);
+		int hCrt = _open_osfhandle((intptr_t) handle_out, _O_TEXT);
+		FILE* hf_out = _fdopen(hCrt, "w");
+		setvbuf(hf_out, NULL, _IONBF, 1);
+		*stdout = *hf_out;
+		
+		HANDLE handle_in = GetStdHandle(STD_INPUT_HANDLE);
+		hCrt = _open_osfhandle((intptr_t) handle_in, _O_TEXT);
+		FILE* hf_in = _fdopen(hCrt, "r");
+		setvbuf(hf_in, NULL, _IONBF, 128);
+		*stdin = *hf_in;
+#endif
+
 		wxMenuBar* bar = new wxMenuBar;
 		setup_menu (bar);
 		SetMenuBar (bar);
@@ -332,7 +347,7 @@ private:
 					    std_to_wx (
 						    String::compose (wx_to_std (_("The directory %1 already exists and is not empty.  "
 										  "Are you sure you want to use it?")),
-								     d->get_path().c_str())
+								     d->get_path().string().c_str())
 						    )
 					    )) {
 					return;
