@@ -1,3 +1,8 @@
+2013-11-26  Carl Hetherington  <cth@carlh.net>
+
+	* A whole load of fixes for lots of bugs when handling filenames
+	using non-Latin characters on Windows.
+
 2013-11-22  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.34 released.
